[package]
name = "x402-super-router"
version = "0.1.0"
edition = "2024"
default-run = "x402-super-router"

[[bin]]
name = "x402-super-router"
path = "src/main.rs"

[[bin]]
name = "test_image"
path = "src/bin/test_image.rs"

[[bin]]
name = "migrate"
path = "src/bin/migrate.rs"

[dependencies]
actix-web = "4"
actix-cors = "0.7"
actix-governor = "0.8"
tokio = { version = "1", features = ["full"] }
serde = { version = "1", features = ["derive"] }
serde_json = "1"
tracing = "0.1"
tracing-subscriber = { version = "0.3", features = ["env-filter"] }
tracing-log = "0.2"
dotenvy = "0.15"
reqwest = { version = "0.12", features = ["json", "blocking"] }
urlencoding = "2"
base64 = "0.22"
primitive-types = "0.13"
sha2 = "0.10"
hex = "0.4"
ron = "0.8"
aws-sdk-s3 = "1"
aws-config = "1"
aws-credential-types = "1"
sqlx = { version = "0.7", features = ["runtime-tokio", "postgres", "chrono", "uuid", "migrate"] }
chrono = { version = "0.4", features = ["serde"] }
uuid = { version = "1", features = ["v4", "serde"] }
